# Iris-App

./: .gitignore  docker-compose.yml  package-lock.json  pyproject.toml  start.bat
src/: Dockerfile.backend
src/frontend/: Dockerfile.frontend  index.html  package-lock.json  package.json  vite.config.js
src/frontend/public/: Iris.csv  iris2.csv
src/frontend/src/: App.jsx  index.css
src/frontend/src/components/: FilterModal.jsx  authHeader.jsx  header.jsx  iris_info.jsx  numberInput.jsx
src/frontend/src/pages/: dataset.jsx  details.jsx  history.jsx  home.jsx  landing.jsx  login.jsx  predict.jsx  register.jsx
src/frontend/src/routes/: authRoutes.jsx  genRoutes.jsx  index.jsx  userRoutes.jsx
src/frontend/src/styles/: Dataset.css  FilterModal.css  NumberInput.css  header.css  history.css  home.css  landing.css  predict.css  register.css
src/iris_app/: main.py
src/iris_app/api/: __init__.py  routes.py  user_routes.py  users.py
src/iris_app/classifier/: Iris_Model_Process.ipynb  xgb_model.pkl
src/iris_app/core/: config.py
src/iris_app/data/: history.json  users.json
src/iris_app/models/: request_models.py  user_model.py
src/iris_app/templates/: home.html  login.html  login.jsx  register.html
src/iris_app/utils/: history_db.py  security.py  token.py  user_db.py
