[project]
name = "iris-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Swalih Shafi",email = "141953957+swalih-shafi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "xgboost (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

